--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/service-worker": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.3.1",
     "public-ip": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "^18.0.5",
     "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.19",
